[gd_scene load_steps=2 format=3 uid="uid://kix3ra0cvnmy"]

[ext_resource type="Script" path="res://Tools/SimpleDownscaleToolWindow.gd" id="1_bta4t"]

[node name="Simple" type="VBoxContainer"]
visible = false
script = ExtResource("1_bta4t")
metadata/_tab_index = 0

[node name="Original Resolution" type="Label" parent="."]
layout_mode = 2
text = "Original Resolution
"

[node name="Resolution Controls" type="HFlowContainer" parent="."]
layout_mode = 2

[node name="Width Container" type="HBoxContainer" parent="Resolution Controls"]
layout_mode = 2

[node name="Width" type="Label" parent="Resolution Controls/Width Container"]
layout_mode = 2
text = "Width"

[node name="WidthBox" type="SpinBox" parent="Resolution Controls/Width Container"]
layout_mode = 2

[node name="Height Container" type="HBoxContainer" parent="Resolution Controls"]
layout_mode = 2

[node name="Height" type="Label" parent="Resolution Controls/Height Container"]
layout_mode = 2
text = "Height"

[node name="HeightBox" type="SpinBox" parent="Resolution Controls/Height Container"]
layout_mode = 2

[node name="Aspect Ratio Container" type="HBoxContainer" parent="Resolution Controls"]
layout_mode = 2

[node name="AspectRatioToggle" type="CheckBox" parent="Resolution Controls/Aspect Ratio Container"]
layout_mode = 2

[node name="AspectRatio" type="Label" parent="Resolution Controls/Aspect Ratio Container"]
layout_mode = 2
text = "Lock Aspect Ratio"

[node name="Confirm Button" type="Button" parent="."]
layout_mode = 2
text = "Confirm Downscale"

[connection signal="value_changed" from="Resolution Controls/Width Container/WidthBox" to="." method="_update_from_width_edit" unbinds=1]
[connection signal="value_changed" from="Resolution Controls/Height Container/HeightBox" to="." method="_update_from_height_edit" unbinds=1]
[connection signal="toggled" from="Resolution Controls/Aspect Ratio Container/AspectRatioToggle" to="." method="_aspect_lock_toggled" unbinds=1]
[connection signal="pressed" from="Confirm Button" to="." method="_confirm_downscale"]
